styled waybar with gruvbox theme and manually fixed spacing issue

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,72 +1,38 @@
 * {
-    /* `otf-font-awesome` is required to be installed for icons */
-    font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+    font-family: 'CaskaydiaCove Nerd Font', 'CaskaydiaCove', monospace, 'Noto Color Emoji';
     font-size: 14px;
-    font-weight: 500;
+    font-weight: bold;
 }
 
 window#waybar {
-    background-color: rgba(0, 0, 0, 0.9);
-    /* border-bottom: 3px solid rgba(100, 114, 125, 0.5); */
-    color: #ffffff;
-    /* transition-property: background-color; */
-    /* transition-duration: .5s; */
-}
-
-window#waybar.hidden {
-    opacity: 0.2;
-}
-
-/*
-window#waybar.empty {
-    background-color: transparent;
-}
-window#waybar.solo {
-    background-color: #FFFFFF;
-}
-*/
-
-window#waybar.termite {
-    background-color: #3F3F3F;
-}
-
-window#waybar.chromium {
-    background-color: #000000;
-    border: none;
+    background-color: rgba(40, 40, 40, 0.8);
+    color: #ebdbb2;
 }
 
 button {
-    /* Use box-shadow instead of border so the text isn't offset */
     box-shadow: inset 0 -3px transparent;
-    /* Avoid rounded borders under each button name */
     border: none;
     border-radius: 0;
 }
 
-/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 button:hover {
     background: inherit;
     box-shadow: inset 0 -3px #ffffff;
 }
 
-/* you can set a style on hover for any module like this */
 #custom-power {
-    color: #59AC77;
+    padding-left: 4px;
 }
 
 #workspaces button {
-    padding: 0 5px;
+    padding: 0 4px;
     background-color: transparent;
     color: #ffffff;
 }
 
-#workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
-}
-
 #workspaces button.active {
-    background-color: #ffffff;
-    color: #000000;
+    background-color: #ebdbb2;
+    color: #282828;
 }
 
 #workspaces button.focused {
@@ -78,37 +44,13 @@ button:hover {
     background-color: #eb4d4b;
 }
 
-#mode {
-    background-color: #64727D;
-    box-shadow: inset 0 -3px #ffffff;
-}
-
-#window,
-#workspaces {
-    margin: 0 4px;
-}
-
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
-    margin-left: 0;
-}
-
-/* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
-    margin-right: 0;
-}
-
-#pulseaudio,
-#network,
-#custom-bluetooth,
-#custom-language,
+#custom-modules,
 #battery,
 #clock {
-    padding: 8px 4px;
-    color: #ffffff;
+    padding: 8px;
+    color: #ebdbb2;
 }
 
-#clock {
-    padding-right: 16px;
+#battery {
+    padding-right: 12px;
 }
-
